fix typo in alt tag

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ extrahead:
                 </div>
             </div>
             <div class="uk-width-1-2@m">
-                <img alt="Scool building for lynchburg campus" src="/assets/lynchburg-campus.png">
+                <img alt="School building for Lynchburg campus" src="/assets/lynchburg-campus.png">
             </div>
         </div>
     </div>
