add coahyt redirect

--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -2,7 +2,8 @@
 layout: image-title-full-image
 image: assets/lynchburg-campus.png
 title: Lynchburg Campus
-
+redirect_from:
+- /coahyt
 ---
 <div class="uk-section">
     <div class="uk-container">
