update homepage tile image

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ extrahead:
     <div class="uk-grid-large uk-grid-match" uk-grid>
         <div class="uk-width-1-3@m">
             <picture>
-                <img class="uk-width-1-1" src="assets/images/IMG_2656.jpg" alt="Kindergarten Student with Toys">
+                <img class="uk-width-1-1" src="assets/images/PXL_20210507_134354938.PORTRAIT-2.jpg" alt="Kindergarten Student doing Project">
             </picture>
             <h3 class="uk-margin-remove-bottom">Grammar School: PK-1st and 2nd-5th</h3>
             <h5 class="uk-margin-remove-top">Herndon Campus</h5>
