--- a/admissions-tuition.html
+++ b/admissions-tuition.html
@@ -18,52 +18,25 @@ title: Admissions and Tuition
     <tbody>
       <table style="table-layout: fixed; width: 100%;" >
       <tr>
-        <td style="width:25%;">PK (ages 3-4) and Kindergarten</td>
+        <td style="width:25%;">JK (ages 3-4) and Kindergarten</td>
             <td>&emsp;$14,900 paid in 10 monthly payments of $1,490</td>
         </tr>
         <tr>
-            <td>Grades 1-8</td>
+            <td>Grades 1-12</td>
             <td>&emsp;$14,900 paid in 10 monthly payments of $1,490</td>
         </tr>
       <tr>
             <td>Extended Day</td>
             <td>&emsp;$2,850 paid in 10 monthly payments of $285</td>
         </tr>
+        <tr>
+          <td style="width:25%;">3 Days on Campus Program (K-12)</td>
+          <td>&emsp;$10,900 paid in 10 monthly payments of $1,090</td>
+          </tr>
     </tbody>
 </table>
     <p>6% discount for yearly payment in advance. Discounts for 2nd, 3rd child.<p>
     <p>Registration fee $600 ($500 before Feb. 1). Books and supplies are included in tuition. School day is 9-3 or extended day is open 7:30-8:30 & 3-6:15.<p>
-     <h3>High School at Herndon Campus</h3>  
-   <table style="margin-left:10px">
-    <tbody>
-      <table style="table-layout: fixed; width: 100%;" >
-      <tr>
-        <td style="width:25%;">Grades 9-12, 5 days on Campus</td>
-        <td>&emsp;$14,900 paid in 10 monthly payments of $1,490</td>
-        </tr>
-        <tr>
-            <td></td>
-        <td>&emsp;Books included. Registration Fee $600 ($500 before Feb. 1)</td>
-        </tr>
-    </tbody>
-</table>
-  <table style="margin-left:10px">
-    <tbody>
-      <table style="table-layout: fixed; width: 100%;" >
-      <tr>
-        <td style="width:25%;">Grades 9-12 Tues/Wed/Thurs on Campus</td>
-            <td>&emsp;$9,750 paid in 10 monthly payments of $975</td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>&emsp;Mon/Fri work is completed off campus.</td>
-        </tr>
-      <tr>
-            <td></td>
-            <td>&emsp;Books $250, Registration $400</td>
-        </tr>
-    </tbody>
-</table>
     <p></p>
     <a class="uk-button uk-button-large uk-button-primary" href="/lynchburg-campus">Click here for Lynchburg Campus Info and Fees.</a>
     <h3>International Students </h3>
