--- a/faculty.html
+++ b/faculty.html
@@ -4,13 +4,19 @@ title: Faculty
 ---
 
 <div class="uk-container">
-    <div class="uk-child-width-expand@s uk-grid-large" uk-grid>
-        {% for person in site.data.faculty %}
-        <div class="uk-width-1-2@s uk-width-1-3@m">
-            <h3>{{ person.name }}</h3>
-            <img src="{{ person.image }}">
-            <p>{{ person.bio|markdownify }}</p>
-        </div>
-        {% endfor %}
+  <div
+    class="uk-child-width-expand@s uk-grid-large"
+    uk-height-match=".faculty-name"
+    uk-grid
+  >
+    {% for person in site.data.faculty %}
+    <div class="uk-width-1-2@s uk-width-1-3@m">
+      <h3 class="faculty-name">{{ person.name }}</h3>
+      {% if person.image and person.image != "" %}<img
+        src="{{ person.image }}"
+      />{% endif %}
+      <p>{{ person.bio|markdownify }}</p>
     </div>
+    {% endfor %}
+  </div>
 </div>
