Update misc. fees and dates

--- a/admissions-tuition.html
+++ b/admissions-tuition.html
@@ -36,7 +36,7 @@ title: Admissions and Tuition
     </tbody>
 </table>
     <p>6% discount for yearly payment in advance. Discounts for 2nd, 3rd child.<p>
-    <p>Registration fee $600 ($500 before Feb. 1). Books and supplies are included in tuition. School day is 9-3 or extended day is open 7:30-8:30 & 3-6:15.<p>
+    <p>Registration fee $600 ($500 before March 1). Books and supplies are included in tuition. School day is 9-3 or extended day is open 7:30-8:30 & 3-6:15.<p>
     <p></p>
     <a class="uk-button uk-button-large uk-button-primary" href="/lynchburg-campus">Click here for Lynchburg Campus Info and Fees.</a>
     <h3>International Students </h3>
@@ -50,7 +50,7 @@ title: Admissions and Tuition
         </tr>
         <tr>
             <td></td>
-            <td>&emsp;Registration Fee $600 ($500 before Feb. 1)</td>
+            <td>&emsp;Registration Fee $600 ($500 before March 1)</td>
         </tr>
         <tr>
             <td>What is included in international tuition?</td>
@@ -79,7 +79,7 @@ title: Admissions and Tuition
     <a class="uk-button uk-button-large uk-button-primary" href="index#contact">Request Tuition Schedule</a>
     
     <h3>Deadlines</h3>
-    <p>Early Application: January 31</p>
+    <p>Early Application: February 28</p>
     <p>Application Deadline: April 30</p>
     <p>Rolling Admissions: After April 30</p>
 
