--- a/high-school-hybrid.html
+++ b/high-school-hybrid.html
@@ -29,11 +29,10 @@ header_size: medium
                         <div class="uk-accordion-content">
                             <h4>Leadership</h4>
                             <p><b>Headmaster</b> - Robert Thoburn - B.A. (Business) Grove City College, J.D. (Law)
-                                Pepperdine University. Founded Oak Hill Christian School (1997). 9 children, 7
-                                grandchildren. </p>
+                                Pepperdine University. Founded Oak Hill Christian School (1997).</p>
                             <p><b>Lynchburg Campus Principal</b> - Mike Harkin - B.A. (Liberal Arts) New Saint Andrews
                                 College, B.A. (Classics) University of Idaho, MBA (Business) Regent University. Founded
-                                Tidewater Classical Academy (2007). 3 Children. </p>
+                                Tidewater Classical Academy (2007).</p>
 
                             <h4>Instructors</h4>
                             <p><b>Senior Humanities Instructor</b> – Mike Harkin – See Lynchburg Campus Principal</p>
@@ -63,9 +62,9 @@ header_size: medium
                         <div class="uk-accordion-content">
                             <p class="uk-margin-remove-bottom">Tuition</p>
                             <ul class="uk-margin-remove-top">
-                                <li>Herndon Campus, 3 days on campus program: $8250</li>
+                                <li>Herndon Campus, 3 days on campus program: $10,900</li>
                                 <li>Full time Pastor discount: 25%. Active Military/First Responder: $250</li>
-                                <li>2nd child 10% discount, 3rd 15%</li>
+                                <li>2nd child 10% discount, 3rd+ 20%</li>
                             </ul>
 
                             <p class="uk-margin-remove-bottom">Fees</p>
