--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -8,9 +8,30 @@ redirect_from:
 ---
 <div class="uk-section">
     <div class="uk-container">
-      <h3>Welcome to Oak Hill Christian School – Lynchburg Campus (9th-12th)</h3>
+        <h3>Welcome to Oak Hill Christian School – Lynchburg Campus (9th-12th)</h3>
         <p>Located near Liberty University, our Lynchburg campus is open to all Christian families seeking a safe and secure setting for their high school-aged children.   Using a 3-Day hybrid schedule, students are on-campus Tues, Wed, Thur and then work independently off-campus Mon & Fri. </p>
-        <p class="uk-margin-large-bottom">We are homeschool-friendly and provide a full 4-year high school curriculum to include History, Literature, Bible, English, Math, Science, Choir and Latin – all taught using the classical Christian approach.  No sports or extracurricular programs are offered as we encourage students to use local club and sports leagues.</p>
+        <p>We are homeschool-friendly and provide a full 4-year high school curriculum to include History, Literature, Bible, English, Math, Science, Choir and Latin – all taught using the classical Christian approach.  No sports or extracurricular programs are offered as we encourage students to use local club and sports leagues.</p>
+    </div>
+</div>
+
+<div class="uk-section-muted">
+    <div class="uk-container uk-padding uk-text-center">
+        <div uk-grid>
+            <div class="uk-width-expand uk-flex uk-flex-middle">
+                <div>
+                    <h1>Schedule a Visit to Our Campus.</h1>
+                    <a href="/visit-lynchburg" class="uk-button uk-button-large uk-button-primary">Visit</a>
+                </div>
+            </div>
+            <div class="uk-width-1-2@m">
+                <img alt="School building for Lynchburg campus" src="/assets/lynchburg-campus.png">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="uk-section">
+    <div class="uk-container">
 
         <div uk-grid class="uk-child-width-1-2@m">
             <div>
@@ -245,7 +266,7 @@ redirect_from:
 <div class="uk-section uk-section-primary">
     <div class="uk-container">
         <h1>Contact us</h1>
-        <p>Call <a href="tel:7037966887">(703) 796-6887</a> or email <a href="mailto:office@oakhillk12.com">office@oakhillk12.com</a></p>
+        <p>Call <a href="tel:7037966887">(434) 546-4101</a> or email <a href="mailto:mokimoto@oakhillk12.com">office@oakhillk12.com</a></p>
         <p>Personal tour? Email <a href="mailto:mokimoto@oakhillk12.com">mokimoto@oakhillk12.com</a> or book a tour <a href="/visit-lynchburg" target="_blank">here</a></p>
     </div>
 </div>
