--- a/high-school-hybrid.html
+++ b/high-school-hybrid.html
@@ -39,7 +39,7 @@ header_size: medium
                             <p><b>Humanities, Latin, Choir, Trigonometry, Physical Science Instructor</b> – Robert
                                 Thoburn III – B.A. (Liberal Arts) New Saint Andrews College</p>
                             <p><b>Chemistry and Algebra I Instructor</b> - Adam Thoburn – B.A. (Liberal Arts) New Saint Andrews College</p>
-                            <p><b>Algebra II Instructor</b> – Andrew Privler – B.A. (History/Education) City College of New York, M.A. (Administration) Bowie State University.  30 year math instructor in New York and P.G. County, Maryland.</p> 
+                            <p><b>Algebra II Instructor</b> – Zachary Aardsma – Biology, Houghton College</p> 
                           <p><b>PE Instructor</b> - David Sabin - B.S. (English Education) and M.S. (Educational Administration) Pensacola Christian College</p>
                             <p><b>Senior Latin Instructor</b> - Seth Thoburn - B.A. (Liberal Arts) New Saint Andrews
                                 College – Final Year</p>
