--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -48,7 +48,7 @@ redirect_from:
                             <p><b>Senior Humanities Instructor</b> – Mike Harkin – See Lynchburg Campus Principal</p>
                             <p><b>Music, Algebra I, Calculus, Practicum Instructor</b> – Robert Thoburn III – B.A. (Liberal Arts) New Saint Andrews College</p>
                             <p><b>Chemistry and Physical Science Instructor</b> - Adam Thoburn – B.A. (Liberal Arts) New Saint Andrews College</p>
-                            <p><b>Algebra II Instructor</b> – Andrew Privler – B.A. (History/Education) City College of New York, M.A. (Administration) Bowie State University.  30 year math instructor in New York and P.G. County, Maryland.</p> 
+                            <p><b>Algebra II Instructor</b> – Zachary Aardsma – Biology, Houghton College</p> 
                             <p><b>Senior Latin Instructor</b> - Seth Thoburn - B.A. (Liberal Arts) New Saint Andrews College – Final Year</p>
                             <p><b>Latin Instructor</b> - Sharon Thoburn - A.A. (Liberal Arts) New Saint Andrews College</p>
 
