Update lynchburg page and remove lynchburg bookings

--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -14,22 +14,6 @@ redirect_from:
     </div>
 </div>
 
-<div class="uk-section-muted">
-    <div class="uk-container uk-padding uk-text-center">
-        <div uk-grid>
-            <div class="uk-width-expand uk-flex uk-flex-middle">
-                <div>
-                    <h1>Schedule a Visit to Our Campus.</h1>
-                    <a href="/visit-lynchburg" class="uk-button uk-button-large uk-button-primary">Visit</a>
-                </div>
-            </div>
-            <div class="uk-width-1-2@m">
-                <img alt="School building for Lynchburg campus" src="/assets/lynchburg-campus.png">
-            </div>
-        </div>
-    </div>
-</div>
-
 <div class="uk-section">
     <div class="uk-container">
 
@@ -164,14 +148,15 @@ redirect_from:
                 </ul>
             </div>
             <div>
-                <h1>Things to Do</h1>
+                <h1 id="things-to-do">Things to Do</h1>
                 <h5 class="uk-margin-remove-bottom">Contact Us</h5>
                 <ul class="uk-margin-remove-top">
-                    <li>Call <a href="tel:7037966887">(703) 796-6887</a> or email <a href="mailto:office@oakhillk12.com">office@oakhillk12.com</a></li>
-                    <li>Personal tour? Email <a href="mailto:sharonthoburn@oakhillk12.com">mokimoto@oakhillk12.com</a> or book a tour <a href="/visit-lynchburg" target="_blank">here</a></li>
+                    <li>Call <a href="tel:4345464101">(434) 546-4101</a>.</li>
+                    <li>Personal tour? Email <a href="mailto:mokimoto@oakhillk12.com?Subject=I would like to visit the Lynchburg Campus">mokimoto@oakhillk12.com</a> or call <a href="tel:4345464101">(434) 546-4101</a>.</li>
                 </ul>
                 <h5 class="uk-margin-remove-bottom">Five Steps for Admission</h5>
                 <ol class="uk-margin-remove-top">
+                    <li><a href="mailto:mokimoto@oakhillk12.com?Subject=I would like to visit the Lynchburg Campus">Schedule a Campus Tour</a></li>
                     <li><a target="_blank" href="https://forms.oakhillk12.com/form/lynchburg-application-form-22-23">Complete Online Application</a></li>
                     <li>Pay Application Fee (Non-Refundable)</li>
                     <li>Principal Interview</li>
@@ -266,7 +251,7 @@ redirect_from:
 <div class="uk-section uk-section-primary">
     <div class="uk-container">
         <h1>Contact us</h1>
-        <p>Call <a href="tel:7037966887">(434) 546-4101</a> or email <a href="mailto:mokimoto@oakhillk12.com">office@oakhillk12.com</a></p>
-        <p>Personal tour? Email <a href="mailto:mokimoto@oakhillk12.com">mokimoto@oakhillk12.com</a> or book a tour <a href="/visit-lynchburg" target="_blank">here</a></p>
+        <li>Call <a href="tel:4345464101">(434) 546-4101</a>.</li>
+        <li>Personal tour? Email <a href="mailto:mokimoto@oakhillk12.com?Subject=I would like to visit the Lynchburg Campus">mokimoto@oakhillk12.com</a> or call <a href="tel:4345464101">(434) 546-4101</a>.</li>
     </div>
 </div>
