--- a/visit.html
+++ b/visit.html
@@ -34,8 +34,10 @@ days_of_week_available:
       Messenger room a few minutes before your tour.
     </li>
   </ol>
-  <a class="uk-button uk-button-large uk-button-primary" href="/visit-lynchburg"
-    >Click here for Lynchburg Bookings.</a
+  <a
+    class="uk-button uk-button-large uk-button-primary"
+    href="/lynchburg-campus#things-to-do"
+    >Click here to visit Lynchburg</a
   >
 </div>
 
