Update international information

--- a/admissions-tuition.html
+++ b/admissions-tuition.html
@@ -1,99 +1,102 @@
 ---
 layout: simple-title
 title: Admissions and Tuition
-
 ---
+
 <div class="uk-container uk-margin-large-bottom">
+  <p>
+    Tuition is not the only thing because it is our desire to help build godly
+    families. If you may have a strong interest in Oak Hill but tuition is above
+    your budget, we encourage you to pursue enrollment anyway. We are happy to
+    discuss scholarship options.
+  </p>
+  <p>
+    Even if tuition is in your budget, we know that it is a sacrifice on your
+    part. Since we constantly hear that something can be had for nothing, it is
+    easy to overlook the hidden costs of "free" education or the price of not
+    finding academically rigorous and authentically Christian education.
+  </p>
+  <p>
+    OH scholarships are funded solely by the school and are available based on
+    need, available funding, and the family's commitment to the mission of the
+    school.
+  </p>
 
-   
-
-    <h3></h3>
-    <p>Tuition is not the only thing because it is our desire to help build godly families.  If you may have a strong interest in Oak Hill but tuition is above your budget, we encourage you to pursue enrollment anyway.  We are happy to discuss scholarship options.</p>  
-  <p>Even if tuition is in your budget, we know that it is a sacrifice on your part.  Since we constantly hear that something can be had for nothing, it is easy to overlook the hidden costs of "free" education or the price of not finding academically rigorous and authentically Christian education.</p>
-  <p>OH scholarships are funded solely by the school and are available based on need, available funding, and the family's commitment to the mission of the school.</p>
-
-        <a href="https://www.ismfast.com/FastPage.php?id=a6699551966bc485646630153c505e0c" target="_blank"><img class="uk-width-medium" src="{{ 'assets/images/fast-logo.png' | relative_url }}"></a>
-    <h3>Tuition and Fees at Herndon Campus:</h3>
-      <table style="margin-left:10px">
+  <a
+    href="https://www.ismfast.com/FastPage.php?id=a6699551966bc485646630153c505e0c"
+    target="_blank"
+    ><img
+      class="uk-width-medium"
+      src="{{ 'assets/images/fast-logo.png' | relative_url }}"
+  /></a>
+  <h3>Tuition and Fees at Herndon Campus:</h3>
+  <table style="margin-left: 10px">
     <tbody>
-      <table style="table-layout: fixed; width: 100%;" >
       <tr>
-        <td style="width:25%;">JK (ages 3-4) and Kindergarten</td>
-            <td>&emsp;$14,900 paid in 10 monthly payments of $1,490</td>
-        </tr>
-        <tr>
-            <td>Grades 1-12</td>
-            <td>&emsp;$14,900 paid in 10 monthly payments of $1,490</td>
-        </tr>
+        <td style="width: 25%">JK (ages 3-4) and Kindergarten</td>
+        <td>&emsp;$14,900 paid in 10 monthly payments of $1,490</td>
+      </tr>
       <tr>
-            <td>Extended Day</td>
-            <td>&emsp;$2,850 paid in 10 monthly payments of $285</td>
-        </tr>
-        <tr>
-          <td style="width:25%;">3 Days on Campus Program (K-12)</td>
-          <td>&emsp;$10,900 paid in 10 monthly payments of $1,090</td>
-          </tr>
+        <td>Grades 1-12</td>
+        <td>&emsp;$14,900 paid in 10 monthly payments of $1,490</td>
+      </tr>
+      <tr>
+        <td>Extended Day</td>
+        <td>&emsp;$2,850 paid in 10 monthly payments of $285</td>
+      </tr>
+      <tr>
+        <td style="width: 25%">3 Days on Campus Program (K-12)</td>
+        <td>&emsp;$10,900 paid in 10 monthly payments of $1,090</td>
+      </tr>
     </tbody>
-</table>
-    <p>6% discount for yearly payment in advance. Discounts for 2nd, 3rd child.<p>
-    <p>Registration fee $600 ($500 before March 1). Books and supplies are included in tuition. School day is 9-3 or extended day is open 7:30-8:30 & 3-6:15.<p>
-    <p></p>
-    <a class="uk-button uk-button-large uk-button-primary" href="/lynchburg-campus">Click here for Lynchburg Campus Info and Fees.</a>
-    <h3>International Students </h3>
-    (high school or other students coming from overseas to study at OH)
+  </table>
+  <p>
+    6% discount for yearly payment in advance. Discounts for 2nd, 3rd child.
+  </p>
+  <p></p>
+  <p>
+    Registration fee $600 ($500 before March 1). Books and supplies are included
+    in tuition. School day is 9-3 or extended day is open 7:30-8:30 & 3-6:15.
+  </p>
+  <p></p>
+  <p></p>
+  <a
+    class="uk-button uk-button-large uk-button-primary"
+    href="/lynchburg-campus"
+    >Click here for Lynchburg Campus Info and Fees.</a
+  >
+  <h3>International Students</h3>
+  (high school or other students coming from overseas to study at OH)
   <p>Please contact us for the current international tuition schedule.</p>
-      <table style="margin-left:10px">
-    <tbody>
-      <table style="table-layout: fixed; width: 100%;" >
-      <tr>
-        <td style="width:25%;"></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>&emsp;Registration Fee $600 ($500 before March 1)</td>
-        </tr>
-        <tr>
-            <td>What is included in international tuition?</td>
-            <td><li>Intensive individualized instruction as needed</td>
-          </tr>
-      <tr>
-            <td></td>
-            <td><li>ESL as needed</td>
-        </tr>
-        </tr>
-      <tr>
-            <td></td>
-            <td><li>Books, supplies</td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><li>College counseling meetings</td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><li>OH is authorized to enroll nonimmigrant students. I-20's are handled by our staff which has decades of experience assisting students with student visas.</td>
-        </tr>
-    </tbody>
-</table>  
-     <h3>Please call or email for an application and complete tuition schedule.</h3>
-    <a class="uk-button uk-button-large uk-button-primary" href="index#contact">Request Tuition Schedule</a>
-    
-    <h3>Deadlines</h3>
-    <p>Early Application: February 28</p>
-    <p>Application Deadline: April 30</p>
-    <p>Rolling Admissions: After April 30</p>
+  <a class="uk-button uk-button-large uk-button-primary" href="index#contact"
+    >Request Tuition Schedule</a
+  >
 
-    <h3>New Student Admissions Procedure</h3>
-    <ol>
-        <li> Visit Oak Hill if you are able. Bring your child with you if you wish. </li>
-        <li> Complete the application for admission and pay the registration fee.</li>
-        <li> For students entering grades 1-12, send us standardized test scores and the past two years’ report cards.
-        </li>
-        <li> We will contact you to schedule any needed testing or interview of the student. </li>
-        <li> Applying for financial aid? Follow the same process but submit your application without the registration
-            fee. Once you receive a financial aid decision you can pay the registration fee.</li>
-    </ol>
+  <h3>Deadlines</h3>
+  <p>Early Application: February 28</p>
+  <p>Application Deadline: April 30</p>
+  <p>Rolling Admissions: After April 30</p>
 
-   
-
+  <h3>New Student Admissions Procedure</h3>
+  <ol>
+    <li>
+      Visit Oak Hill if you are able. Bring your child with you if you wish.
+    </li>
+    <li>
+      Complete the application for admission and pay the registration fee.
+    </li>
+    <li>
+      For students entering grades 1-12, send us standardized test scores and
+      the past two years’ report cards.
+    </li>
+    <li>
+      We will contact you to schedule any needed testing or interview of the
+      student.
+    </li>
+    <li>
+      Applying for financial aid? Follow the same process but submit your
+      application without the registration fee. Once you receive a financial aid
+      decision you can pay the registration fee.
+    </li>
+  </ol>
 </div>
