--- a/lynchburg-campus.html
+++ b/lynchburg-campus.html
@@ -6,11 +6,16 @@ redirect_from:
 - "/coahyt"
 
 ---
-<div class="uk-section">
-    <div class="uk-container">
-        <h3>Welcome to Oak Hill Christian School – Lynchburg Campus (9th-12th)</h3>
-        <p>Located near Liberty University, our Lynchburg campus is open to all Christian families seeking a safe and secure setting for their high school-aged children.   Using a 3-Day hybrid schedule, students are on-campus Tues, Wed, Thur and then work independently off-campus Mon & Fri. </p>
-        <p>We are homeschool-friendly and provide a full 4-year high school curriculum to include History, Literature, Bible, English, Math, Science, Choir and Latin – all taught using the classical Christian approach.  No sports or extracurricular programs are offered as we encourage students to use local club and sports leagues.</p>
+<div class="uk-section uk-container">
+    <h3>Welcome to Oak Hill Christian School – Lynchburg Campus (9th-12th)</h3>
+    <div class="uk-child-width-1-2@m" uk-grid>
+        <div>
+            <p>Located near Liberty University, our Lynchburg campus is open to all Christian families seeking a safe and secure setting for their high school-aged children.   Using a 3-Day hybrid schedule, students are on-campus Tues, Wed, Thur and then work independently off-campus Mon & Fri. </p>
+            <p>We are homeschool-friendly and provide a full 4-year high school curriculum to include History, Literature, Bible, English, Math, Science, Choir and Latin – all taught using the classical Christian approach.  No sports or extracurricular programs are offered as we encourage students to use local club and sports leagues.</p>
+        </div>
+        <div>
+            <img src="/assets/lynchburg-campus-class.png" />
+        </div>
     </div>
 </div>
 
