Remove obselete fast application logo

--- a/admissions-tuition.html
+++ b/admissions-tuition.html
@@ -21,14 +21,8 @@ title: Admissions and Tuition
     need, available funding, and the family's commitment to the mission of the
     school.
   </p>
+  <p>Please email the office for a scholarship application form.</p>
 
-  <a
-    href="https://www.ismfast.com/FastPage.php?id=a6699551966bc485646630153c505e0c"
-    target="_blank"
-    ><img
-      class="uk-width-medium"
-      src="{{ 'assets/images/fast-logo.png' | relative_url }}"
-  /></a>
   <h3>Tuition and Fees at Herndon Campus:</h3>
   <table style="margin-left: 10px">
     <tbody>
