Remove Lynchburg campus

--- a/admissions-tuition.html
+++ b/admissions-tuition.html
@@ -23,7 +23,7 @@ title: Admissions and Tuition
   </p>
   <p>Please email the office for a scholarship application form.</p>
 
-  <h3>Tuition and Fees at Herndon Campus:</h3>
+  <h3>Tuition and Fees:</h3>
   <table style="margin-left: 10px">
     <tbody>
       <tr>
@@ -52,13 +52,7 @@ title: Admissions and Tuition
     Registration fee $600 ($500 before March 1). Books and supplies are included
     in tuition. School day is 9-3 or extended day is open 7:30-8:30 & 3-6:15.
   </p>
-  <p></p>
-  <p></p>
-  <a
-    class="uk-button uk-button-large uk-button-primary"
-    href="/lynchburg-campus"
-    >Click here for Lynchburg Campus Info and Fees.</a
-  >
+
   <h3>International Students</h3>
   (high school or other students coming from overseas to study at OH)
   <p>Please contact us for the current international tuition schedule.</p>
