--- a/index.html
+++ b/index.html
@@ -15,31 +15,28 @@ extrahead:
         <div class="uk-container">
             <div class="uk-margin-large-bottom uk-overlay uk-display-inline-block" style="background-color: rgba(255, 255, 255, .6);backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
                 <h1 class="uk-display-inline-block uk-margin-remove-bottom">A Classical and Christian School</h1><br>
-                <h4 class="uk-display-inline-block uk-margin-remove-top">Herndon, VA | Lynchburg, VA<br>
+                <h4 class="uk-display-inline-block uk-margin-remove-top">Herndon, VA<br>
                 <div class="uk-display-inline-block">
+                    <a href="visit" class="uk-margin-small-top uk-display-inline-block uk-button uk-button-primary uk-button-large">Visit</a>
                     <div class="uk-light uk-display-inline-block">
                     <a href="apply"
                         class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary">Apply</a>
-                    <a href="visit"
-                        class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary">Visit</a>
                     <a href="#contact" class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary"
                         uk-scroll>Contact</a>
                     </div>
-                    <a href="/lynchburg-campus" class="uk-margin-small-top uk-display-inline-block uk-button uk-button-primary uk-button-large">Lynchburg Campus</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="uk-container uk-margin-large-top">
+<div class="uk-container uk-section">
     <div class="uk-grid-large uk-grid-match" uk-grid>
         <div class="uk-width-1-3@m">
             <picture>
                 <img class="uk-width-1-1" src="assets/images/PXL_20210507_134354938.PORTRAIT-2.jpg" alt="Kindergarten Student doing Project">
             </picture>
             <h3 class="uk-margin-remove-bottom">Grammar School: PK-1st and 2nd-5th</h3>
-            <h5 class="uk-margin-remove-top">Herndon Campus</h5>
             <p class="uk-margin-remove-top">
                 Preschool (ages 3-4), Kindergarten and Grades 1-5 enjoy an outstanding academic program mastering basics of reading, writing, and math.</p>
             <div class="uk-width-1-1 uk-text-center">
@@ -53,7 +50,6 @@ extrahead:
                 <img class="uk-width-1-1" src="assets/images/ib.jpg" alt="Science Student in Classroom">
             </picture>
             <h3 class="uk-margin-remove-bottom">School of Logic: Grades 6-8</h3>
-            <h5 class="uk-margin-remove-top">Herndon Campus</h5>
             <p class="uk-margin-remove-top">Junior High instruction takes advantage of students' newfound love of argument, teaching them to reason critically from a Christian perspective.</p>
             <div class="uk-width-1-1 uk-text-center">
                 <a href="/junior-high" class="uk-button uk-button-large uk-button-primary">Learn
@@ -66,7 +62,6 @@ extrahead:
                 <img class="uk-width-1-1" src="assets/images/IMG_0051.jpg" alt="High School Student in Art Class">
             </picture>
             <h3 class="uk-margin-remove-bottom">School of Rhetoric: Grades 9-12</h3>
-            <h5 class="uk-margin-remove-top">Herndon & Lynchburg Campuses</h5>
             <p class="uk-margin-remove-top">Rhetoric students read Great Books and use the tools learned in the grammar and logic stages while learning to write clearly and to speak eloquently and with persuasion.</p>
             <div class="uk-width-1-1 uk-text-center">
                 <a href="/high-school" class="uk-button uk-button-large uk-button-primary">Learn
@@ -74,22 +69,6 @@ extrahead:
             </div>
         </div>
 
-    </div>
-</div>
-
-<div class="uk-section-muted uk-margin-large-top">
-    <div class="uk-container uk-padding uk-text-center">
-        <div uk-grid>
-            <div class="uk-width-expand uk-flex uk-flex-middle">
-                <div>
-                    <h1>Learn more about our new Lynchburg campus.</h1>
-                    <a href="/lynchburg-campus" class="uk-button uk-button-large uk-button-primary">Learn More</a>
-                </div>
-            </div>
-            <div class="uk-width-1-2@m">
-                <img alt="School building for Lynchburg campus" src="/assets/lynchburg-campus.png">
-            </div>
-        </div>
     </div>
 </div>
 
